cn/snowskystudio/newgame/test/error/ConfigurationFileIsAlreadyExists.py
from cn.snowskystudio.newgame.test.error.BaseError import BaseError


class ConfigurationFileIsAlreadyExists(BaseError):
    TYPE = "ConfigurationFileIsAlreadyExists"